# gr-mymodule

./: CMakeLists.txt  MANIFEST.md  README.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-mymoduleConfig.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
grc/: CMakeLists.txt  mymodule_phy_header.block.yml
include/gnuradio/mymodule/: CMakeLists.txt  api.h  phy_header.h
lib/: CMakeLists.txt  phy_header_impl.cc  phy_header_impl.h
python/mymodule/bindings/: CMakeLists.txt  python_bindings.cc
python/mymodule/bindings/docstrings/: phy_header_pydoc_template.h
